Fix for excess spacing between section and footer when it proceeds a widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -40,7 +40,7 @@ body {
     margin: 0 5%;
 }
 
-.widget {
+.widget:not(.row) {
   padding-bottom: 15px;
 }
 
